Archive2/e6/8935052b38cc28/output
main.cpp:14:5: error: no matching function for call to 'f'
    f<int>(); // error, int does not have a nested type foo
    ^~~~~~
main.cpp:8:6: note: candidate function template not viable: requires 1 argument, but 0 were provided
void f(std::conditional_t< std::is_same<T,double>::value, T, void >)
     ^
1 error generated.
